<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" >

    <LinearLayout
        android:id="@+id/equipo_trabajo_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipo_trabajo_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/Title"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/equipo_trabajo_cabecera_jefe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/equipo_trabajo_jefe"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/equipo_trabajo_detalleContacto_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/Title"
            android:textStyle="bold" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/equipo_trabajo_contactos_list"
        android:layout_width="380dp"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/equipo_trabajo_title_layout"
        android:layout_marginTop="25dp"
        android:textSize="260sp" >

    </ExpandableListView>

    <LinearLayout
        android:id="@+id/equipo_trabajo_cabecera_layout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/equipo_trabajo_detalle_contacto_part"
        android:layout_below="@+id/equipo_trabajo_title_layout"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/equipo_trabajo_contactos_list"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/equipo_trabajo_nombreCompleto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipo_trabajo_nombre_completo"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/equipo_trabajo_detalle_contacto_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/equipo_trabajo_cabecera_layout"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/equipo_trabajo_contactos_list"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:text="@string/equipo_trabajo_area"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:text="@string/equipo_trabajo_puesto"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:text="@string/equipo_trabajo_anexo"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:text="@string/equipo_trabajo_email"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="684dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/equipo_trabajo_area_value"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/equipo_trabajo_area_value"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/equipo_trabajo_puesto_value"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/equipo_trabajo_puesto_value"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/equipo_trabajo_anexo"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/equipo_trabajo_anexo_value"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/equipo_trabajo_email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/equipo_trabajo_email_value"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/equipo_trabajo_detalle_contacto_part"
        android:layout_below="@+id/equipo_trabajo_detalle_contacto_part"
        android:layout_marginTop="53dp"
        android:textSize="16sp"
        android:text="* Indica que el colaborador no tiene actualizada su información." />

</RelativeLayout>